--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,65 @@
 
 .container{
   height: 100vh;
+  width: 100%;
+  position: relative;;
 }
 
-img{
-  height: 250px;
-  width: 500px;
+.container-top{
+  height: 20vh;
+  width: 100%;
+  background-color: green;
 }
 
-i.fa-chevron-right{
-  transform: translateX(-90%);
+.container-down{
+  height: 80vh;
+  width: 100%;
+  background-color: lightgray;
 }
 
-i{
-  background-color: black;
-  border-radius: 50%;
+.box{
+  width: 1000px;
+  height: 500px;
+  position: absolute;
+  border: 1px solid black;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: white;
 }
 
-i:hover{
+.box-left{
+  height: 100%;
+  width: 35%;
+  background-color: red;
+  float: left;
+}
+
+.box-right{
+  height: 100%;
+  width: 65%;
   background-color: blue;
+  float: left;
+  display: flex;
+  flex-wrap: wrap;
+ 
 }
 
+.box-left .top,.box-right .top,.box-right .bottom{
+  height: 50px;
+  width: 100%;
+  background-color: grey;
+  border: 1px solid black;
+}
+
+.box-right .main{
+  height: calc(100% - 100px);
+  width: 100%;
+  background-color: yellow;
+  border: 1px solid black;
+}
+
+
+section{
+  border:1px solid black;
+}
