--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+/* GLOBAL  */
+
 *{
   margin: 0;
   padding: 0;
  box-sizing: border-box;
+ font-family:  sans-serif;
 }
 
 .container{
@@ -10,27 +13,29 @@
   position: relative;;
 }
 
+
+
 .container-top{
-  height: 20vh;
+  height: 15vh;
   width: 100%;
-  background-color: green;
+  background-color: #249688;
 }
 
 .container-down{
-  height: 80vh;
+  height: 85vh;
   width: 100%;
-  background-color: lightgray;
+  background-color: #D8DBD7;
 }
 
 .box{
-  width: 1000px;
-  height: 500px;
+  width: 85%;
+  height: 95vh;
   position: absolute;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  background-color: white;
+  border: 1px solid white;
 }
 
 .box-left{
@@ -50,23 +55,69 @@
  
 }
 
+.box-left .top{
+  border-right: 1px solid #929596;
+}
+
 .box-left .top,.box-right .top,.box-right .bottom{
   height: 50px;
   width: 100%;
-  background-color: grey;
-  border: 1px solid black;
+  background-color:#EAE9E9;
 }
 
 .box-right .main{
   height: calc(100% - 100px);
   width: 100%;
   background-color: yellow;
-  border: 1px solid black;
 }
 
+i{
+  color: #929596;
+  cursor: pointer;
+}
 
-section{
-  border:1px solid black;
+/* chat */
+
+.container-chat{
+  margin:20px auto;
+  width: 80%;
+  
+}
+
+.container-chat section{
+  width: 100%;
+  display: flex;
+}
+
+.end{
+  justify-content: end;
+}
+
+.start{
+  justify-content: start;
+}
+
+.user{
+  width: 250px;
+  min-height: 40px;
+  padding: 8px 5px 3px  10px;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.green{
+  background-color: #D6FABA;
+  
+}
+
+.white{
+  background-color: white;
+}
+
+.user .data{
+  text-align: right;
+  font-size: 10px;
+  color: rgb(172, 169, 169);
 }
 
 /* BOX-LEFT */
@@ -96,7 +147,7 @@ section{
 }
 
 .box-left .top .avatar img{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 50%;
   height: 40px;
   width: 40px;
@@ -108,6 +159,12 @@ section{
 
   /* main  */
 
+.box-left .main {
+  height: calc(100% - 50px);
+  background-color: #FAFAFA;
+
+}  
+
 .box-left .main .action {
   margin: 0 10px;
 }
@@ -116,6 +173,7 @@ section{
   display: flex;
   padding: 10px;
   align-items: center;
+  background-color: #8EDAFD;
  
 }
 
@@ -124,14 +182,16 @@ section{
   line-height: 40px;
   width: 40px;
   height: 40px;
-  background-color: coral;
+  background-color: white;
   border-radius: 50%;
+  color: #8EDAFD;
 }
 
  /* input  */
 
 .box-left .main .input{
   position: relative;
+ 
 }
 
 .box-left .main .input i{
@@ -145,6 +205,48 @@ section{
   margin: 3px;
   width: calc(100% - 6px);
   padding: 3px 10px 3px 50px;
+  border-radius: 3px;
+  border:1px solid  #E8E8E8;
+}
+
+.box-left .main .utenti {
+ margin-right: 10px;
+ border:1px solid #E8E8E8;
+ height: calc(100% - 92px);
+
+}
+
+.box-left .main .utenti .utente {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #E8E8E8;
+  background-color: white;
+}
+
+.box-left .main .utenti .utente:hover {
+
+  background-color: #c9c9c9;
+
+}
+
+.box-left .main .utenti .utente img {
+  /* border: 1px solid black; */
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+}
+
+.box-left .main .utenti .utente .utente-more {
+ position: relative;
+ width: 100%;
+ margin-left: 10px;
+}
+
+.box-left .main .utenti .utente .utente-more .data {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 
@@ -177,7 +279,7 @@ section{
 }
 
 .box-right .top .avatar img{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 50%;
   height: 40px;
   width: 40px;
@@ -187,3 +289,29 @@ section{
   margin: 0 5px;
 }
 
+ /* main  */
+
+.box-right .main{
+  background-image:url('/img/mine.jpg');
+} 
+
+ /* bottom  */
+
+.box-right .bottom{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   background-color: #F3EEEA;
+}
+
+.box-right .bottom i{
+  margin: 0 10px;
+}
+
+.box-right .bottom input{
+ width: 100%;
+ height: 90%;
+ border-radius: 5px;
+ padding: 10px;
+ border:1px solid  #E8E8E8;
+}
