--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
   margin: 0;
   padding: 0;
  box-sizing: border-box;
- font-family:  sans-serif;
+ font-family: 'Lato', sans-serif;
+ font-family: 'Open Sans', sans-serif;
+ font-family: 'Roboto', sans-serif;
 }
 
 .container{
@@ -29,6 +31,7 @@
 
 .box{
   width: 85%;
+  min-width: 800px;
   height: 95vh;
   position: absolute;
   /* border: 1px solid black; */
@@ -48,7 +51,7 @@
 .box-right{
   height: 100%;
   width: 65%;
-  background-color: blue;
+  background-color: white;
   float: left;
   display: flex;
   flex-wrap: wrap;
@@ -68,12 +71,22 @@
 .box-right .main{
   height: calc(100% - 100px);
   width: 100%;
-  background-color: yellow;
+  margin-right: 10px;
+  background-color: white;
 }
 
 i{
   color: #929596;
   cursor: pointer;
+}
+
+.nome{
+  font-weight: bolder;
+}
+
+.ultimo-msg{
+  color: gray;
+  font-size: 13px;
 }
 
 /* chat */
@@ -120,6 +133,9 @@ i{
   color: rgb(172, 169, 169);
 }
 
+p{
+  font-size: 15px;
+}
 /* BOX-LEFT */
 
   /* top  */
@@ -134,6 +150,10 @@ i{
   margin: 0 10px;
   display: flex;
   align-items:center;
+}
+
+.box-left .top .avatar span{
+ font-weight: bolder;
 }
 
 .box-left .top .utilities{
@@ -167,6 +187,13 @@ i{
 
 .box-left .main .action {
   margin: 0 10px;
+}
+
+.box-left .main .action span {
+  color: gray;
+  text-decoration: underline;
+  font-size: 12px;
+  font-weight: bolder;
 }
 
 .box-left .main .notifiche {
@@ -247,6 +274,8 @@ i{
   position: absolute;
   right: 0;
   top: 0;
+  font-size: 10px;
+  color: rgb(172, 169, 169);
 }
 
 
@@ -266,6 +295,12 @@ i{
 
 .box-right .top .avatar-info{
   margin: 0 10px;
+}
+
+.box-right .top .avatar-info .data{
+  color: gray;
+  font-size: 12px;
+  font-weight: bolder;
 }
 
 .box-right .top .utilities{
