--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,14 @@ p{
 
 }
 
+.box-left .main .utenti .utente.active {
+
+  background-color: #c9c9c9;
+
+}
+
+
+
 .box-left .main .utenti .utente img {
   /* border: 1px solid black; */
   border-radius: 50%;
@@ -328,6 +336,7 @@ p{
 
 .box-right .main{
   background-image:url('/img/mine.jpg');
+  overflow:auto;
 } 
 
  /* bottom  */
